# bk_idk

./: README.md  README_CN.md
components/app/: CMakeLists.txt  Kconfig
components/at/: CMakeLists.txt
components/at_server/: CMakeLists.txt  Kconfig  at_server.c  at_server.h  at_task.c  atsvr_unite.h
components/bk_airkiss/: CMakeLists.txt  Kconfig  airkiss.h  airkiss_main.c  airkiss_main.h  airkiss_pingpong.c  airkiss_pingpong.h  bk_airkiss.c  bk_airkiss.h
components/bk_ate/: Kconfig  ate.c
components/bk_bluetooth/: CMakeLists.txt  Kconfig
components/bk_bluetooth/api/: bk_a2dp_api.c  bk_at_ble.c  bk_at_bt.c  bk_hfp_api.c  ble_at_gatt.c  ble_gap_export_api.c  bt_gap_export_api.c  bt_hidd_export_api.c  bt_hidh_export_api.c  bt_l2cap_export_api.c  bt_main.c  bt_spp_export_api.c
components/bk_bluetooth/bt/: CMakeLists.txt  Kconfig
components/bk_bluetooth/bt/ble_boarding/: ble_boarding.c  ble_boarding.h  dm_ble_boarding.c
components/bk_bluetooth/feat_config/: bt_feature_config.c
components/bk_bluetooth/include/private/: bk_a2dp_private.h  bk_at_ble.h  bk_at_bluetooth.h  bk_hfp_private.h  ble_api_5_x.h  ble_at_gatt.h  bluetooth_internal.h  bluetooth_legacy_include.h  bt_feature_config.h  bt_include.h  bt_os_adapter.h  dm_ble_gap_task.h  dm_bluetooth_task.h  dm_bt_gap_task.h  dm_bt_hidd_task.h  dm_bt_hidh_task.h  dm_bt_l2cap_task.h  dm_bt_spp_task.h
components/bk_bluetooth/mesh/: CMakeLists.txt  Kconfig  mesh.cmake
components/bk_bluetooth/mesh/include/: zephyr.h
components/bk_bluetooth/mesh/include/bluetooth/: hci.h  uuid.h
components/bk_bluetooth/mesh/include/drivers/bluetooth/: hci_driver.h
components/bk_bluetooth/mesh/include/net/: buf.h
components/bk_bluetooth/mesh/include/settings/: settings.h
components/bk_bluetooth/mesh/include/shell/: shell.h
components/bk_bluetooth/mesh/include/sys/: __assert.h  atomic.h  byteorder.h  dlist.h  list_gen.h  printk.h  util.h  z_mem_slab.h  z_poll.h  z_queue.h  z_wait_q.h  z_work.h
components/bk_bluetooth/mesh/include/tinycrypt/: aes.h  cbc_mode.h  ctr_mode.h  ecc.h  hmac.h  hmac_prng.h
components/bk_bluetooth/mesh/include/zephyr/: types.h  z_errno.h  z_ffs.h  z_gcc.h  zephyr_log.h  zephyr_rtos.h  zp_config.h
components/bk_bluetooth/mesh/sample/: ble_mesh_export_api.c  ble_mesh_led_sample.c  ble_mesh_led_sample.h  ble_mesh_provision_sample.c  ble_mesh_provision_sample.h  ble_mesh_tmall_spirit_sample.c  ble_mesh_tmall_spirit_sample.h  ble_mesh_ui.c  ble_mesh_ui.h
components/bk_bluetooth/mesh/subsys/bluetooth/common/: log.h
components/bk_bluetooth/mesh/subsys/bluetooth/host/: adv.c  buf.c  conn.c  ecc.h  ethermind_impl.c  ethermind_impl.h  gatt.c  hci_core.c  hci_core.h  hci_driver.c  hci_driver.h  hci_ecc.c  l2cap.c  scan.c  smp.c  testing.h
components/bk_bluetooth/mesh/subsys/bluetooth/mesh/: adv.c  adv_ext.c  app_keys.c  beacon.c  cfg_cli.c  crypto.c  friend.c  gatt_services.c  heartbeat.c  lpn.c  mesh.h  msg.c  net.c  pb_adv.c  shell.c  subnet.c  subnet.h  test.c  transport.c
components/bk_bluetooth/mesh/subsys/bluetooth/shell/: bt.c
components/bk_bluetooth/mesh/subsys/net/: net_buf.c
components/bk_bluetooth/mesh/subsys/sys/: atomic_c.c  z_mem_slab.c  z_poll.c  z_queue.c  z_work.c  zephy_rtos.c  zephyr_work_thread.c
components/bk_bluetooth/mesh/subsys/tinycrypt/src/: ble_aes_decrypt.c  ble_aes_encrypt.c  ecc_platform_specific.c  hmac_prng.c  ty_ecc.c  ty_hmac.c
components/bk_bluetooth/soc/bk7236/: bluetooth.c
components/bk_bluetooth/soc/bk7239/: bluetooth.c
components/bk_bluetooth/soc/bk7256/: bluetooth.c
components/bk_bluetooth/soc/bk7286/: bluetooth.c
components/bk_cli/: CMakeLists.txt  Kconfig  cli.h  cli_adc.c  cli_at.c  cli_aud.c  cli_aud_agc.c  cli_aud_ate.c  cli_aud_cp0.c  cli_aud_v1_1.c  cli_config.h  cli_dma.c  cli_dvp.c  cli_exception.c  cli_flash.c  cli_flash_test.c  cli_gpio.c  cli_i2s.c  cli_interrupt.c  cli_jpeg_sw_enc.c  cli_jpegdec.c  cli_lcd_qspi.c  cli_lin.c  cli_lwip.c  cli_main.c  cli_mem.c  cli_misc.c  cli_netif.c  cli_os.c  cli_ota.c  cli_otp.c  cli_phy.c  cli_psram.c  cli_pwm.c  cli_pwr.c  cli_reg.c  cli_rpc.c  cli_sd.c  cli_slcd.c  cli_spi.c  (+12 more)
components/bk_common/: bk_feature.c
components/bk_event/: event.c
components/bk_httpc/: CMakeLists.txt  Kconfig  httpc.c  httpc.h
components/bk_https/: CMakeLists.txt  Kconfig  bk_https.c  bk_ssl.c  http_header.c  http_utils.c
components/bk_init/: CMakeLists.txt  bk_init.c  components_init.c
components/bk_libs/: CMakeLists.txt
components/bk_netif/: CMakeLists.txt  Kconfig  bk_at_netif.c  bk_netif.c
components/bk_phy/: CMakeLists.txt  Kconfig
components/bk_phy/include/: bk_phy_adapter.h  bk_phy_ate.h  bk_rf_adapter.h  bk_rf_internal.h
components/bk_phy/src/: bk_phy_adapter.c  bk_phy_api.c  bk_rf_adapter.c
components/bk_pm/: CMakeLists.txt  Kconfig  low_vol.c  pm.c  pm_misc.c  pm_model.c
components/bk_rtos/: CMakeLists.txt  Kconfig  platform_stub.c
components/bk_startup/: system_main.c
components/bk_system/: Kconfig  delay.c  mac.c  printf.c  printf_base.c  reboot.c
components/bk_uid/: CMakeLists.txt  Kconfig  bk_uid.c  bk_uid_adaptor.c  bk_uid_adaptor.h
components/bk_usb/: Kconfig  (+3 more)
components/bk_wifi/: CMakeLists.txt  Kconfig
components/bk_wifi/include/: bk_wifi_adapter.h  fhost_tx.h  reg_domain.h  rw_ieee80211.h  rw_msdu.h  rwm_proto.h  rwnx_config.h  rwnx_defs.h  rwnx_misc.h  rwnx_params.h  rwnx_rx.h  rwnx_tx.h  rwnx_txq.h  rwnx_version.h  wifi_at.h  wifi_v2.h
components/bk_wifi/include/bk_private/: bk_phy.h  bk_phy_internal.h  bk_rw.h  bk_wifi.h  bk_wifi_types.h
components/bk_wifi/src/: bk_wifi_adapter.c  hostapd_intf.c  lsig_monitor.c  net_param.c  pbuf.c  phy.c  rw_ieee80211.c  rw_msdu.c  rw_msg_rx.c  rw_msg_tx.c  rw_task.c  rwm_proto.c  rwnx_params.c  rwnx_rx.c  rwnx_td.c  rwnx_tx.c  rwnx_txq.c  rwnx_utils.c  sa_ap.c  sa_station.c  skbuff.c  soft_encrypt.c  wifi_api.c  wifi_api_wrapper.c  wifi_at.c  wifi_config.c  wifi_frame.c  wifi_init.c  wifi_netif.c  wifi_v2.c  wifi_wpa_cmd.c
docs/: project_doc_template.rst  version.json
include/: CMakeLists.txt
projects/: projects.rst
(+2667 files in other folders)
